This commit was manufactured by cvs2svn to create tag 'MMBase-1_8_6_rc1'.