@@ -23,7 +23,7 @@ import org.mmbase.util.logging.*;
  *
  * @author Michiel Meeuwissen
  * @since  MMBase-1.7
- * @version $Id: QueryAgeConstraintTag.java,v 1.8 2008-02-27 10:49:01 michiel Exp $
+ * @version $Id: QueryAgeConstraintTag.java,v 1.6 2005-05-28 09:10:15 michiel Exp $
  * @see    org.mmbase.module.builders.DayMarkers
  */
 public class QueryAgeConstraintTag extends CloudReferrerTag implements QueryContainerReferrer {
@@ -49,7 +49,7 @@ public class QueryAgeConstraintTag extends CloudReferrerTag implements QueryCont
         field = getAttribute(f);
     }
 
-    public void setElement(String e) throws JspTagException {
+    public void setElement(String e) throws JspTagException { 
         element = getAttribute(e);
     }
 
@@ -73,7 +73,7 @@ public class QueryAgeConstraintTag extends CloudReferrerTag implements QueryCont
         NodeQuery query = dayMarks.createQuery();
         StepField step = query.createStepField("daycount");
         int currentDay = (int) (System.currentTimeMillis()/(1000*60*60*24));
-        Integer day = currentDay  - age;
+        Integer day = new Integer(currentDay  - age);
         if (log.isDebugEnabled()) {
             log.debug("today : " + currentDay + " requested " + day);
         }
@@ -99,7 +99,7 @@ public class QueryAgeConstraintTag extends CloudReferrerTag implements QueryCont
         if (minAge == Attribute.NULL && maxAge == Attribute.NULL) {
             throw new JspTagException("Either 'minage' or 'maxage' (or both) attributes must be present");
         }
-        QueryContainer c = findParentTag(QueryContainer.class, (String) container.getValue(this));
+        QueryContainer c = (QueryContainer) findParentTag(QueryContainer.class, (String) container.getValue(this));
         Query query = c.getQuery();
 
         String fieldName;
@@ -129,17 +129,17 @@ public class QueryAgeConstraintTag extends CloudReferrerTag implements QueryCont
             int maxMarker = getDayMark(maxAgeInt);
             if (maxMarker > 0) {
                 // BETWEEN constraint
-                newConstraint = query.createConstraint(stepField, maxMarker + 1, Integer.valueOf(getDayMark(minAgeInt - 1)));
+                newConstraint = query.createConstraint(stepField, new Integer(maxMarker + 1), new Integer(getDayMark(minAgeInt - 1)));
             } else {
-                newConstraint = query.createConstraint(stepField, FieldCompareConstraint.LESS_EQUAL, Integer.valueOf(getDayMark(minAgeInt - 1)));
+                newConstraint = query.createConstraint(stepField, FieldCompareConstraint.LESS_EQUAL, new Integer(getDayMark(minAgeInt - 1)));
             }
         } else if (maxAgeInt != -1) { // only on max
             int maxMarker = getDayMark(maxAgeInt);
             if (maxMarker > 0) {
-                newConstraint = query.createConstraint(stepField, FieldCompareConstraint.GREATER_EQUAL, Integer.valueOf(maxMarker + 1));
+                newConstraint = query.createConstraint(stepField, FieldCompareConstraint.GREATER_EQUAL, new Integer(maxMarker + 1));
             }
         } else if (minAgeInt > 0) {
-            newConstraint = query.createConstraint(stepField, FieldCompareConstraint.LESS_EQUAL, Integer.valueOf(getDayMark(minAgeInt - 1)));
+            newConstraint = query.createConstraint(stepField, FieldCompareConstraint.LESS_EQUAL, new Integer(getDayMark(minAgeInt - 1)));
         } else {
             // both unspecified
         }
@@ -152,7 +152,7 @@ public class QueryAgeConstraintTag extends CloudReferrerTag implements QueryCont
             // if there is a OR or an AND tag, add
             // the constraint to that tag,
             // otherwise add it direct to the query
-            QueryCompositeConstraintTag cons = findParentTag(QueryCompositeConstraintTag.class, (String) container.getValue(this), false);
+            QueryCompositeConstraintTag cons = (QueryCompositeConstraintTag) findParentTag(QueryCompositeConstraintTag.class, (String) container.getValue(this), false);
             if (cons!=null) {
                 cons.addChildConstraint(newConstraint);
             } else {
