@@ -17,14 +17,15 @@ import org.mmbase.util.logging.Logging;
 import org.mmbase.util.xml.DocumentReader;
 import org.w3c.dom.Element;
 
-import java.util.concurrent.ConcurrentHashMap;
+import edu.emory.mathcs.backport.java.util.concurrent.ConcurrentHashMap;
+
 
 
 /**
  * Cache manager manages the static methods of {@link Cache}. If you prefer you can call them on this in stead.
  *
  * @since MMBase-1.8
- * @version $Id: CacheManager.java,v 1.26 2008-04-12 13:15:23 michiel Exp $
+ * @version $Id: CacheManager.java,v 1.6.2.2 2008-03-19 15:38:04 michiel Exp $
  */
 public class CacheManager {
 
@@ -33,8 +34,7 @@ public class CacheManager {
     /**
      * All registered caches
      */
-    //private static final NavigableMap<String, Cache<?,?>> caches = new ConcurrentSkipListMap<String, Cache<?,?>>();
-    private static final Map<String, Cache<?,?>> caches = new ConcurrentHashMap<String, Cache<?,?>>();
+    private static final Map caches = new ConcurrentHashMap();
 
     /**
      * Returns the Cache with a certain name. To be used in combination with getCaches(). If you
@@ -44,29 +44,7 @@ public class CacheManager {
      * @see #getCaches
      */
     public static Cache getCache(String name) {
-        return caches.get(name);
-    }
-
-    /**
-     * Returns a cache wrapped in a 'Bean', so it is not a Map any more. This makes it easier
-     * accesible by tools which want that (like EL).
-     * @since MMBase-1.9
-     */
-    public static Bean getBean(String name) {
-        return new Bean(getCache(name));
-    }
-    public static Set<Bean> getCaches(String className) {
-        Set<Bean> result = new HashSet<Bean>();
-        for (Cache c : caches.values()) {
-            try {
-                if (className == null || Class.forName(className).isInstance(c)) {
-                    result.add(new Bean(c));
-                }
-            } catch (Exception e) {
-                throw new RuntimeException(e);
-            }
-        }
-        return result;
+        return (Cache) caches.get(name);
     }
 
     /**
@@ -74,14 +52,13 @@ public class CacheManager {
      *
      * @return A Set containing the names of all caches.
      */
-    public static Set<String> getCaches() {
+    public static Set getCaches() {
         return Collections.unmodifiableSet(caches.keySet());
     }
-
     /**
      * @since MMBase-1.8.6
      */
-    public static Map<String, Cache<?, ?>> getMap() {
+    public static Map getMap() {
         return Collections.unmodifiableMap(caches);
     }
 
@@ -93,8 +70,8 @@ public class CacheManager {
      * @param cache A cache.
      * @return The previous cache of the same type (stored under the same name)
      */
-    public static <K,V> Cache<K,V> putCache(Cache<K,V> cache) {
-        Cache old = caches.put(cache.getName(), cache);
+    protected static Cache putCache(Cache cache) {
+        Cache old = (Cache) caches.put(cache.getName(), cache);
         configure(configReader, cache.getName());
         return old;
     }
@@ -126,13 +103,13 @@ public class CacheManager {
             if (log.isDebugEnabled()) log.debug("Configuring cache " + only + " with file " + xmlReader.getSystemId());
         }
 
-        for (Element cacheElement: xmlReader.getChildElements("caches", "cache")) {
+        Iterator e =  xmlReader.getChildElements("caches", "cache");
+        while (e.hasNext()) {
+            Element cacheElement = (Element) e.next();
             String cacheName =  cacheElement.getAttribute("name");
             if (only != null && ! only.equals(cacheName)) {
                 continue;
             }
-            // TODO: fix again when everybody runs 1.5.0_08, because of
-            // generics bug http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4916620
             Cache cache = getCache(cacheName);
             if (cache == null) {
                 log.service("No cache " + cacheName + " is present (perhaps not used yet?)");
@@ -140,8 +117,10 @@ public class CacheManager {
                 String clazz = xmlReader.getElementValue(xmlReader.getElementByPath(cacheElement, "cache.implementation.class"));
                 if(!"".equals(clazz)) {
                     Element cacheImpl = xmlReader.getElementByPath(cacheElement, "cache.implementation");
-                    Map<String,String> configValues = new HashMap<String,String>();
-                    for (Element attrNode: xmlReader.getChildElements(cacheImpl, "param")) {
+                    Iterator it = xmlReader.getChildElements(cacheImpl, "param");
+                    Map configValues = new HashMap();
+                    while (it.hasNext()) {
+                        Element attrNode = (Element)it.next();
                         String paramName = xmlReader.getElementAttributeValue(attrNode, "name");
                         String paramValue = xmlReader.getElementValue(attrNode);
                         configValues.put(paramName, paramValue);
@@ -151,7 +130,7 @@ public class CacheManager {
                 String status = xmlReader.getElementValue(xmlReader.getElementByPath(cacheElement, "cache.status"));
                 cache.setActive(status.equalsIgnoreCase("active"));
                 try {
-                    Integer size = Integer.valueOf(xmlReader.getElementValue(xmlReader.getElementByPath(cacheElement, "cache.size")));
+                    Integer size = new Integer(xmlReader.getElementValue(xmlReader.getElementByPath(cacheElement, "cache.size")));
                     cache.setMaxSize(size.intValue());
                     log.service("Setting " + cacheName + " " + status + " with size " + size);
                 } catch (NumberFormatException nfe) {
@@ -195,7 +174,6 @@ public class CacheManager {
     }
 
 
-
     /**
      * The caches can be configured with an XML file, this file can
      * be changed which causes the caches to be reconfigured automaticly.
@@ -203,9 +181,7 @@ public class CacheManager {
     private static ResourceWatcher configWatcher = new ResourceWatcher () {
             public void onChange(String resource) {
                 try {
-                    org.xml.sax.InputSource is =  ResourceLoader.getConfigurationRoot().getInputSource(resource);
-                    log.service("Reading " + is.getSystemId());
-                    configReader = new DocumentReader(is, Cache.class);
+                    configReader = new DocumentReader(ResourceLoader.getConfigurationRoot().getInputSource(resource), Cache.class);
                 } catch (Exception e) {
                     log.error(e);
                     return;
@@ -225,9 +201,11 @@ public class CacheManager {
 
 
     public static int getTotalByteSize() {
+        Iterator i = caches.entrySet().iterator();
         int len = 0;
         SizeOf sizeof = new SizeOf();
-        for (Map.Entry entry : caches.entrySet()) {
+        while (i.hasNext()) {
+            Map.Entry entry = (Map.Entry) i.next();
             len += sizeof.sizeof(entry.getKey()) + sizeof.sizeof(entry.getValue());
         }
         return len;
@@ -239,78 +217,12 @@ public class CacheManager {
      */
     public static void shutdown() {
         log.info("Clearing all caches");
-        for(Cache<?,?> cache : caches.values()) {
+        Iterator  i =  caches.values().iterator();
+        while (i.hasNext()) {
+            Cache cache = (Cache) i.next();
             cache.clear();
-        }
-        caches.clear();
-    }
-
-
-    /**
-     * Used in config/functions/caches.xml
-     */
-    public Object remove(String name, Object key) {
-        Cache cache = getCache(name);
-        if (cache == null) throw new IllegalArgumentException();
-        return cache.remove(key);
-    }
-
-    public static class Bean<K, V> {
-        /* private final Cache<K, V> cache; // this line prevents building in Java 1.5.0_07 probably because of http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4916620 */
-        private final Cache cache;
-        public Bean(Cache<K, V> c) {
-            cache = c;
-        }
-        public String getName() { return cache.getName(); }
-        public String getDescription() { return cache.getDescription(); }
-        public int getMaxEntrySize() { return cache.getMaxEntrySize(); }
-        public Set<Map.Entry<K, V>> getEntrySet() { return new HashSet<Map.Entry<K, V>>(cache.entrySet()); }
-        public Set<K> getKeySet() { return new HashSet<K>(cache.keySet()); }
-        public long getHits() { return cache.getHits(); }
-        public long  getMisses() { return cache.getMisses(); }
-        public long getPuts() { return cache.getPuts(); }
-        public  int getMaxSize() { return cache.maxSize(); }
-        public  int getSize() { return cache.size(); }
-        public double getRatio() { return cache.getRatio(); }
-        public String getStats() { return cache.getStats(); }
-        public String toString() { return cache.toString(); }
-        public boolean isActive() { return cache.isActive(); }
-        public int getByteSize() { return cache.getByteSize(); }
-        public int getCheapByteSize() { return cache.getCheapByteSize(); }
-        public boolean isEmpty() { return cache.isEmpty(); }
-        public ReleaseStrategy getReleaseStrategy() { return cache instanceof QueryResultCache ? ((QueryResultCache) cache).getReleaseStrategy() : null;}
-        public Map<K, V> getMap() {  return cache; }
-        public Map<K, Integer> getCounts() {
-            return new AbstractMap<K, Integer>() {
-                public Set<Map.Entry<K, Integer>> entrySet() {
-                    return new AbstractSet<Map.Entry<K, Integer>>() {
-                        public int size() {
-                            return cache.size();
-                        }
-                        public Iterator<Map.Entry<K, Integer>> iterator() {
-                            return new Iterator<Map.Entry<K, Integer>>() {
-                                private Iterator<K> iterator = new HashSet<K>(cache.keySet()).iterator();
-                                public boolean hasNext() {
-                                    return iterator.hasNext();
-                                }
-                                public Map.Entry<K, Integer> next() {
-                                    K key = iterator.next();
-                                    return new org.mmbase.util.Entry<K, Integer>(key, cache.getCount(key));
-                                }
-                                public void remove() {
-                                    throw new UnsupportedOperationException();
-                                }
-                            };
-                        }
-                    };
-                }
-            };
-        }
-        public boolean equals(Object o) {
-            return  o instanceof Bean && ((Bean) o).cache.equals(cache);
-        }
-        public int hashCode() {
-            return cache.hashCode();
+            i.remove();
         }
     }
+
 }
